--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "gulp-es6-module-transpiler": "^0.1.0",
     "gulp-rename": "^1.2.0"
   },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
+  },
   "dependencies": {
     "sortablejs": "^0.7.2"
   }
